--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -1,11 +1,14 @@
 schema:
   - graph/schema.graphqls
+
 exec:
-  filename: graph/generated.go
-  package: graph
+  filename: graph/generated/generated.go
+  package: generated
+
 model:
   filename: graph/model/models_gen.go
   package: model
+
 resolver:
   layout: follow-schema
   dir: graph
